[gd_scene load_steps=6 format=3 uid="uid://coqnotnw53qos"]

[ext_resource type="Script" path="res://scripts/gui/popups/pu_add_mission.gd" id="1_sb7lb"]
[ext_resource type="Theme" uid="uid://b6lxwm6kegh43" path="res://resources/theme02.res" id="2_lwayu"]
[ext_resource type="PackedScene" uid="uid://bkr1dac4bgebr" path="res://scenes/gui/custom_gui/custom_line_edit.tscn" id="3_oc503"]
[ext_resource type="PackedScene" uid="uid://b1s62wvt8ay5v" path="res://scenes/gui/custom_gui/custom_file_dialog.tscn" id="4_dnga6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wpq0a"]
bg_color = Color(0.18, 0.17, 0.16, 1)

[node name="add_mission" type="Window"]
title = "Add Mission"
position = Vector2i(0, 36)
size = Vector2i(600, 175)
transient = true
exclusive = true
script = ExtResource("1_sb7lb")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_lwayu")

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wpq0a")

[node name="MarginContainer" type="MarginContainer" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = -6
theme_override_constants/margin_top = -6
theme_override_constants/margin_right = -6
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel/MarginContainer"]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
tabs_visible = false

[node name="MarginContainer" type="MarginContainer" parent="Control/Panel/MarginContainer/VBoxContainer/TabContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel/MarginContainer/VBoxContainer/TabContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/Panel/MarginContainer/VBoxContainer/TabContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Mission"

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Panel/MarginContainer/VBoxContainer/TabContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/Panel/MarginContainer/VBoxContainer/TabContainer/MarginContainer/VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
text = "Path"

[node name="path_line_edit" parent="Control/Panel/MarginContainer/VBoxContainer/TabContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("3_oc503")]
unique_name_in_owner = true
layout_mode = 2
clear_button_enabled = false

[node name="browse_btn" type="Button" parent="Control/Panel/MarginContainer/VBoxContainer/TabContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Browse"

[node name="info_label" type="Label" parent="Control/Panel/MarginContainer/VBoxContainer/TabContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "placeholder text"
horizontal_alignment = 1

[node name="info_label2" type="Label" parent="Control/Panel/MarginContainer/VBoxContainer/TabContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "Mission folder must contain:
    - darkmod.txt
    - startingmap.txt or tdm_mapsequence.txt
    - maps folder"

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="Control/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ok_btn" type="Button" parent="Control/Panel/MarginContainer/VBoxContainer/HBoxContainer/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
disabled = true
text = "Ok"

[node name="CenterContainer2" type="CenterContainer" parent="Control/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="cancel_btn" type="Button" parent="Control/Panel/MarginContainer/VBoxContainer/HBoxContainer/CenterContainer2"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "Cancel"

[node name="file_dialog" parent="." instance=ExtResource("4_dnga6")]

[connection signal="text_changed" from="Control/Panel/MarginContainer/VBoxContainer/TabContainer/MarginContainer/VBoxContainer/HBoxContainer/path_line_edit" to="." method="_on_path_line_edit_text_changed"]
[connection signal="pressed" from="Control/Panel/MarginContainer/VBoxContainer/TabContainer/MarginContainer/VBoxContainer/HBoxContainer/browse_btn" to="." method="_on_browse_btn_pressed"]
[connection signal="pressed" from="Control/Panel/MarginContainer/VBoxContainer/HBoxContainer/CenterContainer/ok_btn" to="." method="_on_ok_btn_pressed"]
[connection signal="pressed" from="Control/Panel/MarginContainer/VBoxContainer/HBoxContainer/CenterContainer2/cancel_btn" to="." method="_on_cancel_btn_pressed"]
